cicd/pipeline/myapp-eventlistener-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-myapp
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: myapp-branch
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: el-myapp
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
